Fixed overflow issue

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -1,7 +1,3 @@
-body {
-    padding: 1.5rem;
-}
-
 header {
     display: flex;
     justify-content: space-between;
@@ -25,6 +21,8 @@ header {
         padding: 20vh 0 0 1rem;
         background-color: var(--off-white);
         transition: all 500ms ease-in-out;
+
+        background-color: red;
     }
         .nav-links.open {
             right: -1.5rem;
@@ -45,8 +43,3 @@ header {
         transform: translateY(-50%);
         right: 0;
     }
-
-main {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-}
