--- a/css/desktop-view.css
+++ b/css/desktop-view.css
@@ -17,4 +17,10 @@
     .nav-links li {
         margin: 0 .5rem;
     }
+
+    
+    main {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
 }
